fixup! fix(docs-infra): improve legibility and focus on content

--- a/aio/src/styles/0-base/_typography.scss
+++ b/aio/src/styles/0-base/_typography.scss
@@ -108,6 +108,10 @@ a {
   }
 }
 
+p {
+  margin: 1em 0;
+}
+
 p + ul {
   margin-top: 4px;
 }
